--- a/src/pages/adm/Edit/edit.css
+++ b/src/pages/adm/Edit/edit.css
@@ -24,8 +24,10 @@
   cursor: pointer;
 }
 
-.edit__imovel__card {
+.edit__imovel__cards {
   margin-top: 2rem;
+  display: flex;
+  gap: 1.5rem;
 }
 
 .edit__search__btn {
@@ -35,38 +37,6 @@
 
 .change__card {
   display: none;
-}
-
-/* EDIT CONTAINER */
-
-.edit__container {
-  width: 25rem;
-  display: flex;
-  border: 1px solid #000;
-  border-radius: 15px;
-  padding: 1rem;
-  flex-direction: column;
-  gap: 1rem;
-}
-
-.edit__input__box {
-  display: flex;
-  align-items: center;
-  gap: 0.5rem;
-  & input {
-    width: 100%;
-  }
-}
-
-.edit__form {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-}
-
-.edit__container__id {
-  font-size: 0.85rem;
-  color: #363636;
 }
 
 .edit__card_btns {
