--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
     "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
     sans-serif;
   text-decoration: none;
+  -webkit-tap-highlight-color: transparent;
 }
 
 :root {
