--- a/src/pages/About/about.css
+++ b/src/pages/About/about.css
@@ -13,11 +13,11 @@
   font-weight: 400;
 }
 
-.about-img {
+.about__img {
   width: 25%;
 }
 
-.about-img img {
+.about__img img {
   width: 100%;
   inset: 0;
   object-fit: cover;
@@ -39,14 +39,14 @@
   color: #554825;
 }
 
-.about-content {
+.about__content {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   width: 50%;
 }
 
-.about-content p {
+.about__content p {
   text-indent: 50px;
   line-height: 1.9rem;
   letter-spacing: 0.05rem;
@@ -57,7 +57,7 @@
   padding-right: 0.5rem;
 }
 
-.about-container {
+.about__container {
   display: flex;
   justify-content: space-between;
   flex-direction: row;
@@ -67,3 +67,86 @@
   text-shadow: 0 0 2px var(--main-color);
   color: #a17703;
 }
+
+/* RESPONSIVE */
+
+@media (min-width: 0px) {
+  .about {
+    padding: 1rem 3rem;
+    padding-top: 4rem;
+    & h1 {
+      font-size: 2.5rem;
+    }
+  }
+
+  .about__content {
+    gap: 1rem;
+    width: 100%;
+  }
+
+  .about__content p {
+    line-height: 1.5rem;
+  }
+
+  .about__img {
+    width: 35%;
+  }
+
+  .about__container {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
+    height: 100%;
+  }
+}
+
+@media (min-width: 576px) {
+  .about {
+    padding: 1rem 7rem;
+  }
+}
+
+@media (min-width: 768px) {
+  .about__container {
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 0;
+  }
+
+  .about__content {
+    width: 60%;
+  }
+
+  .about__img {
+    width: 30%;
+  }
+
+  .about {
+    padding: 0 3rem;
+    & h1 {
+      h1 {
+        font-size: 3rem;
+      }
+    }
+  }
+}
+
+@media (min-width: 992px) {
+  .about {
+    padding: 7rem;
+  }
+
+  .about__img {
+    width: 25%;
+  }
+
+  .about__content {
+    width: 55%;
+  }
+
+  .about__content p {
+    line-height: 1.9rem;
+  }
+}
+/* /RESPONSIVE */
