--- a/src/pages/adm/Register/register.css
+++ b/src/pages/adm/Register/register.css
@@ -1,14 +1,16 @@
 .register__page {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-evenly;
-  width: 100%;
   padding: 0 10rem;
-  padding-top: 1rem;
+  padding-top: 3rem;
+  background-image: linear-gradient(to bottom, #000, transparent);
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  align-items: center;
+
   & h1 {
     font-size: 2rem;
-    font-weight: 600;
+    font-weight: 500;
+    margin-bottom: 1rem;
   }
 }
 
@@ -16,9 +18,22 @@ button {
   cursor: pointer;
 }
 
+.register__main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  width: 100%;
+  background-color: #fffffffb;
+  box-shadow: 0 0 10px #38383844;
+  border-radius: 15px;
+  padding: 1rem 2rem;
+  width: 100%;
+  text-align: center;
+}
+
 .register__form {
   display: flex;
-
   justify-content: space-between;
   width: 100%;
 }
@@ -124,4 +139,30 @@ button {
   & * {
     cursor: pointer;
   }
+}
+
+.cad__btn {
+  cursor: pointer;
+  background-color: rgb(0, 99, 247);
+
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 0.9rem;
+  border-radius: 5px;
+  border: transparent;
+  color: #fff;
+  height: 1.8rem;
+
+  & :hover {
+    opacity: 0.9;
+  }
+}
+
+input,
+select,
+textarea {
+  border-radius: 8px;
+  border: 1px solid #acacac;
 }
