--- a/src/Components/ImovelCard/imovel-card.css
+++ b/src/Components/ImovelCard/imovel-card.css
@@ -1,14 +1,13 @@
 .imovel__card {
-  margin-top: 1rem;
   border: 1px solid #ccc;
   border-radius: 10px;
-  width: 12rem;
   aspect-ratio: 3/4;
   display: flex;
   box-shadow: 0 0 10px #0000002f;
   overflow: hidden;
   flex-direction: column;
   position: relative;
+  max-width: 15rem;
 }
 
 .imovel__card img {
@@ -63,6 +62,8 @@
   display: flex;
   flex-direction: column;
   text-align: center;
+  margin-top: 0.5rem;
+  gap: 0.05rem;
 }
 
 .imovel__card__state {
