--- a/src/pages/ImovelPage/imovel-page.css
+++ b/src/pages/ImovelPage/imovel-page.css
@@ -189,9 +189,10 @@
   }
 
   .imovel__content__text {
-    width: 100%;
+    min-width: 100%;
     height: 100%;
     text-align: justify;
+    margin-top: -1.4rem;
   }
 }
 
@@ -254,5 +255,9 @@
   .or__btn {
     display: flex;
     align-items: center;
+  }
+
+  .imovel__content__text {
+    margin-top: 1rem;
   }
 }
