--- a/src/Components/ImovelCard/imovel-card.css
+++ b/src/Components/ImovelCard/imovel-card.css
@@ -6,7 +6,7 @@
   box-shadow: 0 0 10px #0000002f;
   overflow: hidden;
   flex-direction: column;
-  position: relative;
+
   max-width: 15rem;
 }
 
@@ -35,7 +35,7 @@
   font-weight: 600;
 }
 
-.learn__more__btn {
+.black__btn {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -50,7 +50,7 @@
   font-size: 0.8rem;
 }
 
-.learn__more__btn:hover {
+.black__btn:hover {
   color: #000;
   background-color: inherit;
   box-shadow: 0 0 10px #00000031;
@@ -64,6 +64,7 @@
   text-align: center;
   margin-top: 0.5rem;
   gap: 0.05rem;
+  position: relative;
 }
 
 .imovel__card__state {
