--- a/src/pages/ImovelPage/imovel-page.css
+++ b/src/pages/ImovelPage/imovel-page.css
@@ -192,6 +192,8 @@
     min-width: 100%;
     height: 100%;
     text-align: justify;
+    hyphens: auto;
+    overflow-wrap: break-word;
     margin-top: -1.4rem;
   }
 
