--- a/src/pages/Login/login.css
+++ b/src/pages/Login/login.css
@@ -78,3 +78,30 @@
   cursor: pointer;
   color: #555555;
 }
+
+/* RESPONSIVE */
+@media (min-width: 0px) {
+  .login__container {
+    width: 100%;
+  }
+}
+
+@media (min-width: 576px) {
+  .login__container {
+    width: 70%;
+  }
+}
+
+@media (min-width: 768px) {
+  .login__container {
+    width: 50%;
+  }
+}
+
+@media (min-width: 992px) {
+  .login__container {
+    width: 40%;
+  }
+}
+
+/* RESPONSIVE */
