--- a/src/Components/ReturnBtn/return-btn.css
+++ b/src/Components/ReturnBtn/return-btn.css
@@ -1,13 +1,14 @@
 .return__btn {
   position: absolute;
-  top: 3.2rem;
-  left: 0.2rem;
+  top: 3.35rem;
+  left: -0.4rem;
   cursor: pointer;
   width: 3rem;
   padding: 0.5rem;
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 10;
   & img {
     width: 100%;
   }
