--- a/src/pages/EditImovelPage/edit-imovel-page.css
+++ b/src/pages/EditImovelPage/edit-imovel-page.css
@@ -78,3 +78,36 @@
 .save__btn {
   background-color: rgb(0, 99, 247);
 }
+
+.preview__item {
+  position: relative;
+  border-radius: 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.preview__item img {
+  width: 100px;
+  height: 80px;
+  object-fit: cover;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+}
+
+.preview__container {
+  display: flex;
+}
+
+.remove__img__btn {
+  position: absolute;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  right: 0.1rem;
+  top: 0.1rem;
+  padding: 0 0.45rem;
+  border-radius: 50%;
+  background-color: rgba(73, 73, 73, 0.842);
+}
