--- a/src/pages/Login/login.css
+++ b/src/pages/Login/login.css
@@ -4,7 +4,7 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
-  min-height: 100vh;
+  min-height: 100svh;
   background-image: linear-gradient(to top, transparent, #000);
 }
 
