--- a/src/pages/adm/Register/register.css
+++ b/src/pages/adm/Register/register.css
@@ -68,26 +68,42 @@ button {
 .form__container-2 {
   display: flex;
   justify-content: end;
-
+  width: 100%;
   flex-direction: column;
   gap: 0.5rem;
 
   & * {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-      Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+    font-family:
+      system-ui,
+      -apple-system,
+      BlinkMacSystemFont,
+      "Segoe UI",
+      Roboto,
+      Oxygen,
+      Ubuntu,
+      Cantarell,
+      "Open Sans",
+      "Helvetica Neue",
       sans-serif;
   }
 }
 
 .input__images {
-  width: 510px;
-  display: fixed;
+  max-width: 480px;
+  width: 100%;
+  cursor: pointer;
+  & * {
+    cursor: pointer;
+  }
 }
 
 .preview__container {
   display: flex;
   flex-wrap: wrap;
   gap: 10px;
+  overflow: auto;
+  max-height: 80px;
+  max-width: 480px;
 }
 
 .preview__item {
@@ -131,13 +147,6 @@ button {
   align-items: center;
   & input:nth-last-child(1) {
     width: 100%;
-  }
-}
-
-.input__images {
-  cursor: pointer;
-  & * {
-    cursor: pointer;
   }
 }
 
@@ -185,9 +194,6 @@ textarea {
     position: absolute;
     bottom: 0;
   }
-  .input__images {
-    width: 100%;
-  }
 
   .form__container-2 {
     margin-bottom: 3rem;
@@ -224,15 +230,12 @@ textarea {
   .register__form {
     flex-direction: row;
     position: static;
+    gap: 5rem;
   }
 
   .cad__btn {
     position: static;
     bottom: auto;
-  }
-
-  .input__images {
-    width: 510px;
   }
 
   .form__container-2 {
