--- a/src/pages/EditImovelPage/edit-imovel-page.css
+++ b/src/pages/EditImovelPage/edit-imovel-page.css
@@ -87,13 +87,14 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  overflow: hidden;
 }
 
 .preview__item img {
   width: 100px;
   height: 80px;
   object-fit: cover;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
 
 .preview__container {
