--- a/src/pages/ImovelPage/imovel-page.css
+++ b/src/pages/ImovelPage/imovel-page.css
@@ -171,6 +171,12 @@
   font-weight: 500;
 }
 
+.imovel__content__bairro {
+  color: #6b6b6b;
+  font-size: 0.9rem;
+  cursor: default;
+}
+
 /* RESPONSIVE */
 @media (min-width: 0px) {
   .imovel__page__main {
