--- a/src/pages/EditImovelPage/edit-imovel-page.css
+++ b/src/pages/EditImovelPage/edit-imovel-page.css
@@ -4,7 +4,7 @@
   width: 100%;
   justify-content: center;
   align-items: center;
-  background-color: #f0f0f0;
+  background-color: #fff;
 }
 
 .edit__input__box {
@@ -26,13 +26,11 @@
   margin-top: 2rem;
   width: 30rem;
   display: flex;
-  border: 1px solid #000;
   border-radius: 15px;
   padding: 1rem;
   flex-direction: column;
   gap: 1rem;
   box-shadow: 0 0 10px #6868689f;
-  border: none;
   background-color: #fafafa;
 }
 
@@ -98,7 +96,10 @@
 }
 
 .preview__container {
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  padding-right: 0.6rem;
+  flex-wrap: wrap;
   width: 100%;
   overflow: auto;
 }
@@ -124,6 +125,11 @@
     width: 80px;
     height: 60px;
   }
+
+  .edit__container {
+    box-shadow: none;
+    background-color: #fff;
+  }
 }
 
 @media (min-width: 576px) {
@@ -137,4 +143,11 @@
 }
 
 @media (min-width: 992px) {
+  .edit__container {
+    box-shadow: 0 0 10px #6868689f;
+  }
+
+  .edit__container__main {
+    background-color: #f0f0f0;
+  }
 }
