--- a/src/pages/adm/Register/register.css
+++ b/src/pages/adm/Register/register.css
@@ -24,7 +24,7 @@ button {
   align-items: center;
   justify-content: space-evenly;
   width: 100%;
-  background-color: #fffffffb;
+  background-color: #fff;
   box-shadow: 0 0 10px #38383844;
   border-radius: 15px;
   padding: 1rem 2rem;
@@ -183,6 +183,11 @@ textarea {
     padding: 0;
     padding-top: 4rem;
     padding-bottom: 2rem;
+    background-image: none;
+  }
+
+  .register__main {
+    box-shadow: none;
   }
 
   .register__form {
@@ -225,6 +230,7 @@ textarea {
     padding: 0 10rem;
     padding-top: 3rem;
     padding-bottom: 0;
+    background-image: linear-gradient(to bottom, #000, transparent);
   }
 
   .register__form {
@@ -252,6 +258,10 @@ textarea {
   .preview__item img {
     width: 120px;
     height: 120px;
+  }
+
+  .register__main {
+    box-shadow: 0 0 10px #38383844;
   }
 }
 
